--- a/package.json
+++ b/package.json
@@ -1,34 +1,43 @@
 {
-    "name": "jquery-testee",
+    "name": "oowlish-jquery-testeee",
     "version": "1.0.0",
-    "description": "Oowlish JQuery Test",
+    "description": "Oowlish React Test",
     "main": "index.js",
     "license": "MIT",
-    "private": true,
     "scripts": {
         "dev": "webpack --mode development",
-        "start:server": "json-server --watch ./db/data.json --port 3030 --id ./db/ids.json",
+        "start:server": "json-server --watch ./db/data.json --port 3030 --id upin",
         "start:client": "webpack-dev-server --config ./webpack.config.js --mode development --open",
-        "start": "concurrently --kill-others \"yarn start:server\" \"yarn start:client\""
+        "start": "concurrently --kill-others \"yarn start:server\" \"yarn start:client\"",
+        "unit": "jest --config ./jest.config.ts --all",
+        "unit:watch": "jest --config ./jest.config.ts --watch",
+        "unit:coverage": "jest --config ./jest.config.ts --coverage"
     },
     "devDependencies": {
         "@babel/core": "^7.9.6",
-        "@babel/preset-env": "^7.9.6",
+        "@babel/preset-env": "^7.12.13",
         "@babel/preset-react": "^7.12.13",
         "@types/react": "^17.0.1",
         "@types/react-dom": "^17.0.0",
         "@types/webpack-env": "^1.16.0",
         "awesome-typescript-loader": "^5.2.1",
+        "babel-jest": "^26.6.3",
         "babel-loader": "^8.1.0",
         "concurrently": "^5.3.0",
         "css-loader": "^4.3.0",
         "html-webpack-plugin": "^4.5.1",
+        "jest": "^26.6.3",
+        "jest-cli": "^26.6.3",
         "loader-utils": "^2.0.0",
         "mini-css-extract-plugin": "^0.10.1",
+        "node-sass": "^5.0.0",
         "react-hot-loader": "^4.13.0",
+        "react-test-renderer": "^17.0.1",
         "sass": "^1.32.7",
         "sass-loader": "^10.1.1",
-        "typescript": "^4.1.5",
+        "style-loader": "^2.0.0",
+        "ts-node": "^9.1.1",
+        "typescript": "^3.0.0",
         "webpack": "^4.46.0",
         "webpack-cli": "^3.3.12",
         "webpack-dev-server": "^3.11.2"
@@ -36,6 +45,7 @@
     "dependencies": {
         "@types/jest": "^26.0.20",
         "@types/node": "^14.14.25",
+        "axios": "^0.21.1",
         "json-server": "^0.16.1",
         "react": "^17.0.1",
         "react-dom": "^17.0.1"
