--- a/package.json
+++ b/package.json
@@ -17,8 +17,9 @@
         "@babel/core": "^7.9.6",
         "@babel/preset-env": "^7.12.13",
         "@babel/preset-react": "^7.12.13",
-        "@types/react": "^17.0.1",
+        "@types/react": "^17.0.2",
         "@types/react-dom": "^17.0.0",
+        "@types/react-redux": "^7.1.16",
         "@types/webpack-env": "^1.16.0",
         "awesome-typescript-loader": "^5.2.1",
         "babel-jest": "^26.6.3",
@@ -47,6 +48,8 @@
         "axios": "^0.21.1",
         "json-server": "^0.16.1",
         "react": "^17.0.1",
-        "react-dom": "^17.0.1"
+        "react-dom": "^17.0.1",
+        "react-redux": "^7.2.2",
+        "redux": "^4.0.5"
     }
 }
