chore: added eslint and prettier configs

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-    "name": "oowlish-jquery-testeee",
+    "name": "oowlish-react-testeee",
     "version": "1.0.0",
     "description": "Oowlish React Test",
     "main": "index.js",
@@ -11,7 +11,8 @@
         "start": "concurrently --kill-others \"yarn start:server\" \"yarn start:client\"",
         "unit": "jest --config ./jest.config.ts --all",
         "unit:watch": "jest --config ./jest.config.ts --watch",
-        "unit:coverage": "jest --config ./jest.config.ts --coverage"
+        "unit:coverage": "jest --config ./jest.config.ts --coverage",
+        "lint": "eslint src/**/*.ts src/**/*.tsx --fix"
     },
     "devDependencies": {
         "@babel/core": "^7.9.6",
@@ -21,17 +22,25 @@
         "@types/react-dom": "^17.0.0",
         "@types/react-redux": "^7.1.16",
         "@types/webpack-env": "^1.16.0",
+        "@typescript-eslint/eslint-plugin": "^4.15.1",
+        "@typescript-eslint/parser": "^4.15.1",
         "awesome-typescript-loader": "^5.2.1",
         "babel-jest": "^26.6.3",
         "babel-loader": "^8.1.0",
         "concurrently": "^5.3.0",
         "css-loader": "^4.3.0",
+        "eslint": "^7.20.0",
+        "eslint-config-prettier": "^7.2.0",
+        "eslint-plugin-prettier": "^3.3.1",
+        "eslint-plugin-react": "^7.22.0",
+        "eslint-plugin-react-hooks": "^4.2.0",
         "html-webpack-plugin": "^4.5.1",
         "jest": "^26.6.3",
         "jest-cli": "^26.6.3",
         "loader-utils": "^2.0.0",
         "mini-css-extract-plugin": "^0.10.1",
         "node-sass": "^5.0.0",
+        "prettier": "^2.2.1",
         "react-hot-loader": "^4.13.0",
         "react-test-renderer": "^17.0.1",
         "sass": "^1.32.7",
