--- a/package.json
+++ b/package.json
@@ -12,12 +12,18 @@
         "unit": "jest --config ./jest.config.ts --all",
         "unit:watch": "jest --config ./jest.config.ts --watch",
         "unit:coverage": "jest --config ./jest.config.ts --coverage",
-        "lint": "eslint src/**/*.ts src/**/*.tsx --fix"
+        "unit:dev": "jest --config ./jest.config.ts --coverage --watch",
+        "lint": "eslint src/**/*.ts src/**/*.tsx tests/**/*.tsx --fix"
     },
     "devDependencies": {
+        "@axe-core/react": "^4.1.1",
         "@babel/core": "^7.9.6",
         "@babel/preset-env": "^7.12.13",
         "@babel/preset-react": "^7.12.13",
+        "@testing-library/react": "^11.2.5",
+        "@types/faker": "^5.1.6",
+        "@types/jest": "^26.0.20",
+        "@types/node": "^14.14.25",
         "@types/react": "^17.0.2",
         "@types/react-dom": "^17.0.0",
         "@types/react-redux": "^7.1.16",
@@ -31,9 +37,11 @@
         "css-loader": "^4.3.0",
         "eslint": "^7.20.0",
         "eslint-config-prettier": "^7.2.0",
+        "eslint-plugin-jsx-a11y": "^6.4.1",
         "eslint-plugin-prettier": "^3.3.1",
         "eslint-plugin-react": "^7.22.0",
         "eslint-plugin-react-hooks": "^4.2.0",
+        "faker": "^5.4.0",
         "html-webpack-plugin": "^4.5.1",
         "jest": "^26.6.3",
         "jest-cli": "^26.6.3",
@@ -45,6 +53,7 @@
         "react-test-renderer": "^17.0.1",
         "sass": "^1.32.7",
         "style-loader": "^2.0.0",
+        "ts-jest": "^26.5.1",
         "ts-node": "^9.1.1",
         "typescript": "^3.0.0",
         "webpack": "^4.46.0",
@@ -52,8 +61,6 @@
         "webpack-dev-server": "^3.11.2"
     },
     "dependencies": {
-        "@types/jest": "^26.0.20",
-        "@types/node": "^14.14.25",
         "axios": "^0.21.1",
         "json-server": "^0.16.1",
         "react": "^17.0.1",
