--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
         "@babel/core": "^7.9.6",
         "@babel/preset-env": "^7.12.13",
         "@babel/preset-react": "^7.12.13",
+        "@commitlint/cli": "^11.0.0",
+        "@commitlint/config-conventional": "^11.0.0",
         "@testing-library/react": "^11.2.5",
         "@types/faker": "^5.1.6",
         "@types/jest": "^26.0.20",
