chore: added some paths to tsconfig.json

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -16,8 +16,13 @@
         "experimentalDecorators": true,
         "emitDecoratorMetadata": true,
         "declarationDir": "./dist",
-        "typeRoots": ["node_modules/@types"]
+        "typeRoots": ["node_modules/@types"],
+        "baseUrl": "./",
+        "paths": {
+            "@/*": ["src/*"],
+            "#/*": ["tests/*"]
+        }
     },
-    "include": ["src/**/*.ts"],
+    "include": ["src/**/*.ts", "tests/**/*.ts"],
     "exclude": ["node_modues"]
 }
