--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,4 +1,4 @@
-version: '3.7'
+version: "3.7"
 services:
     app:
         container_name: doctors-react
@@ -6,17 +6,17 @@ services:
             context: .
             dockerfile: Dockerfile
         volumes:
-            - '.:/app'
-            - '/app/node_modules'
+            - ".:/app"
+            - "/app/node_modules"
         ports:
-            - '8080:8080'
+            - "8080:8080"
         environment:
             - NODE_ENV=development
     json-server:
         image: vimagick/json-server
-        command: -H 0.0.0.0 -p 3000 -w .db/db.json --id upin
+        command: -H 0.0.0.0 -p 3000 -w db.json --id upin
         ports:
-            - '3030:3030'
+            - "3030:3030"
         volumes:
-            - ./data:/data
+            - ./db:/db
         restart: always
