--- a/tsconfig.json
+++ b/tsconfig.json
@@ -24,5 +24,5 @@
         }
     },
     "include": ["src/**/*.ts", "tests/**/*.ts"],
-    "exclude": ["node_modues"]
+    "exclude": ["node_modules"]
 }
