--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
         "start:server": "json-server --watch ./db/data.json --port 3030 --id upin",
         "start:client": "webpack-dev-server --config ./webpack.config.js --mode development --open",
         "start": "concurrently --kill-others \"yarn start:server\" \"yarn start:client\"",
+        "build": "webpack --mode production -p",
         "unit": "jest --config ./jest.config.ts --all",
         "unit:watch": "jest --config ./jest.config.ts --watch",
         "unit:coverage": "jest --config ./jest.config.ts --coverage",
